<resources>
    <string name="app_name">GoFuel</string>

    // Menu buttons
    <string name="btnShop">Shop Button</string>
    <string name="btnStation">Stations Button</string>
    <string name="btnInvoice">Invoices Button</string>

    // Bottom nav bar
    <string name="btnHome">Home Button</string>
    <string name="btnLogout">Logout Button</string>
    <string name="btnMenu">Menu Floating Button</string>

    // Fragments Titles
    <string name="stationTitle">Lojas</string>
    <string name="invoiceTitle">Faturas</string>
    <string name="mainTitle">Bem vinda/o</string>
    <string name="loginBtn">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="pendingTitle">Faturas Pendentes</string>
    <string name="finishedTitle">Últimas faturas</string>
    <string name="searchHint">Nome Artigo/Categoria</string>
    <string name="cardBtn">Botão Carrinho</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="totalCart">Total:</string>
    <string name="closeCart">Pagar</string>
</resources>