<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.CartFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/removeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginBottom="70dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/btnMenu"
        android:src="@drawable/ic_delete"
        app:backgroundTint="@color/primary" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="@color/primary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ListView
            android:id="@+id/linesList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="top"
            android:layout_marginHorizontal="40dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="0.9"
            android:divider="@android:color/transparent" />

        <FrameLayout
            android:id="@+id/totalCard"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="0.1"
            android:background="@drawable/cart_background">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.7"
                    android:background="@drawable/cart_background">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="24dp"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/TitleTextStyle"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            android:gravity="center_vertical"
                            android:text="@string/totalCart"
                            android:textColor="@color/white" />

                        <TextView
                            android:id="@+id/totalValue"
                            style="@style/TitleTextStyle"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            android:gravity="center|end"
                            android:text="100,00€"
                            android:textColor="@color/white" />
                    </LinearLayout>
                </FrameLayout>

                <TextView
                    android:id="@+id/payButton"
                    style="@style/TitleTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:background="@drawable/cart_background"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/closeCart"
                    android:textColor="@color/white" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

</FrameLayout>